--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "better-sqlite3": "^11.9.1",
     "framer-motion": "^12.6.3",
     "next": "15.2.4",
